<resources>
	<string name="app_name">Zumer</string>
	<string name="please_fill">Please fill your details below to\nadd your information</string>
	<string name="signUp_header">Please fill your details below to
complete your account</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="cpassword">Confirm password</string>
	<string name="phone">Phone No.</string>
	<string name="vehicleType">Vehicle Type</string>
	<string name="address">Address</string>
	<array name="vehicleType">
		<item>--Select Vehicle Type --</item>
		<item>Car</item>
		<item>Bike</item>
		<item>Taxi</item>


	</array>
	<string name="title_activity_main2">MainActivity2</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="title_activity_verification_acitivity">VerificationAcitivity</string>
	<string name="let_s_get_started">Let\'s get started</string>
	<string name="verify_your_account_using_otp">Verify your account using OTP</string>
	<string name="or">Or</string>
	<string name="continue_with">Continue with</string>
	<string name="terms_of_service_text">By creating an account, you agree to our <b><u>Terms of Service</u></b> and <b><u>Privacy Policy</u></b>.</string>
	<string name="terms_of_service">Terms of Service</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="login">Login</string>
	<string name="proceed">Proceed</string>
	<string name="enter_the_otp">Enter the OTP</string>
	<string name="resend_otp_in_12s">Resend OTP in 12s</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="name">Name</string>
	<string name="mobileNo">Mobile No.</string>
	<string name="date_of_birth">Date of birth</string>

	<string name="india_beloved">India\'s Beloved Electric Bike Taxi Service </string>
	<string name="to_have_comfortable">To have a comfortable ride experience with RideKaro,</string>
	<string name="please_allow">please allow us the following permissions</string>
	<string name="location">Location: To locate you and get rides easily</string>
	<string name="phoneVerify">Phone: To verify your account and secure it</string>
	<string name="allow_permissions">Allow Permissions</string>
	<string name="home">Home</string>
	<string name="payment_menu">Payment</string>
	<string name="my_rides">My Rides</string>
	<string name="invite_friends">Invite Friends</string>
	<string name="power_pass">Power Pass</string>
	<string name="notifications">Notifications</string>
	<string name="insurance">Claims</string>
	<string name="settings">Settings</string>
	<string name="support_menu">Support</string>
	<string name="current_location">Current Location</string>
	<string name="enter_destination">Destination Location</string>
	<string name="ride">Book Ride</string>
	<string name="distance">distance</string>
	<string name="total">total</string>
	<string name="apply_coupon_code">Apply Coupon Code</string>
	<string name="cash">Cash</string>
	<string name="request_ride">Request Ride</string>
	<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDGTNMJhlUjoSOggpK3Gsvkm5aRUXtOUCg</string>
	<string name="set_your_pickup_location_of_where_you_want_to_go">Set your pickup location of where you want to go.</string>
	<string name="set_destination">Set Destination</string>
	<string name="enjoy_your_trip">Enjoy Your Trip</string>
	<string name="you_re_all_set_enjoy_your_trip_with_safety_comfort_and_security">You’re all set. Enjoy your trip with safety, comfort and security.</string>
	<string name="add_dropoff_location_or_skip_it_if_you_are_unsure_select_vehicle_type_as_your_ride_and_book_it">Add dropoff location or skip it if you are unsure. Select vehicle type as your ride and book it.</string>
	<string name="book_a_ride">Book a Ride</string>
	<string name="ok">OK</string>
	<string name="your_ride_is_complete_don_t_forget_to_rate_us_on_playstore">Your ride is complete! Don\'t forget to rate us on playstore</string>
	<string name="search_drop_location">Search Destination</string>
	<string name="let_s_go">Let\'s Go</string>
	<!-- Preference Titles -->
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>

	<!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="reply_title">Default reply action</string>

	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="general">General</string>
	<string name="others">Others</string>
	<string name="profile">Profile</string>
	<string name="favorites">Favorites</string>
	<string name="app_language">App Language</string>
	<string name="english">English</string>
	<string name="app_shortcuts">App Shortcuts</string>
	<string name="Enter_Mobile_Number">Enter Mobile Number</string>
	<string name="Manage_favorite_locations">Manage favorite locations</string>
	<string name="Preferences">Preferences</string>
	<string name="Manage_preferences">Manage preferences</string>
	<string name="create_shortcuts_on_home_launcher">Create shortcuts on home launcher</string>
	<string name="about">About</string>
	<string name="_5_5_27">5.5.27</string>
	<string name="subscribe_to_beta">Subscribe to Beta</string>
	<string name="get_early_access_to_latest_features">Get early access to latest features</string>
	<string name="logout">Log Out</string>
	<string name="payment">Payment</string>
	<string name="pay">Pay</string>
	<string name="link">Link</string>
	<string name="Personal_Wallet">Wallet</string>
	<string name="bike_taxi">Electric Taxi</string>

</resources>