<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context=".MainActivity">


	<LinearLayout
		android:id="@+id/llGradientTOP"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/gradienttop_bg"
		android:orientation="vertical">


		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:gravity="bottom"
			android:orientation="vertical">

			<TextView
				android:id="@+id/sign_up_"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_marginTop="@dimen/_20sdp"
				android:gravity="top"
				android:lineSpacingExtra="1sp"
				android:text="@string/app_name"
				android:textAppearance="@style/sign_up_"
				android:translationY="-0.64sp" />

			<TextView
				android:id="@+id/please_fill"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/sign_up_"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="40.32dp"
				android:layout_marginTop="108.29dp"
				android:gravity="center_horizontal|top"
				android:lineSpacingExtra="5sp"
				android:text="@string/please_fill"
				android:textAppearance="@style/please_fill"
				android:translationY="-2.32sp" />


		</RelativeLayout>


	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/llGradientTOP"
		android:layout_margin="@dimen/_15sdp"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/etFirstName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/_5sdp"
				android:layout_weight="1"
				android:hint="@string/first_name"
				android:imeOptions="actionNext"
				android:inputType="textPersonName"
				android:maxLines="1"
				android:padding="@dimen/_15sdp" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/etLastName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/_5sdp"
				android:layout_weight="1"
				android:hint="@string/last_name"
				android:imeOptions="actionNext"
				android:inputType="textPersonName"
				android:maxLines="1"
				android:padding="@dimen/_15sdp" />


		</LinearLayout>

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/etEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_5sdp"
			android:hint="@string/email"
			android:imeOptions="actionNext"
			android:inputType="textEmailAddress"
			android:maxLines="1"
			android:padding="@dimen/_15sdp" />

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/etPhoneNo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_5sdp"
			android:hint="@string/phone"
			android:imeOptions="actionNext"
			android:inputType="phone"
			android:maxLength="10"
			android:maxLines="1"
			android:padding="@dimen/_15sdp" />

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/etAddress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_5sdp"
			android:hint="@string/address"
			android:imeOptions="actionDone"
			android:inputType="textCapCharacters|textMultiLine"

			android:maxLines="3"
			android:minLines="1"
			android:padding="@dimen/_15sdp"
			tools:text="Kolkata - 700 071, India." />

		<androidx.appcompat.widget.AppCompatSpinner
			android:id="@+id/spVehicle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_5sdp"
			android:entries="@array/vehicleType"
			android:hint="@string/vehicleType"
			android:imeOptions="actionDone"
			android:inputType="phone"
			android:maxLines="1"
			android:padding="@dimen/_5sdp"
			android:visibility="gone" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginStart="@dimen/_12sdp"
			android:layout_marginEnd="@dimen/_12sdp"
			android:background="@color/grey"
			android:visibility="gone" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btnSave"
			android:layout_width="@dimen/_230sdp"
			android:layout_height="@dimen/_35sdp"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/_15sdp"
			android:background="@drawable/button_selected"
			android:elevation="20dp"
			android:text="Submit"
			android:textColor="@color/white"
			android:textStyle="bold" />
	</LinearLayout>

</RelativeLayout>