<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
>

	<ImageView
		android:id="@+id/ivRideKaroImage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:background="@drawable/electric"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tvIndia_beloved"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:fontFamily="@font/productsansregular"
		android:text="@string/india_beloved"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/ivRideKaroImage" />

	<TextView
		android:id="@+id/tvComfortable"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:fontFamily="@font/productsansregular"
		android:gravity="center"
		android:text="@string/to_have_comfortable"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvIndia_beloved" />

	<TextView
		android:id="@+id/tvPleaseAllow"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:fontFamily="@font/productsansregular"
		android:text="@string/please_allow"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvComfortable" />


	<LinearLayout
		android:id="@+id/location"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="@dimen/_50sdp"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvComfortable">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_pin" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/_10sdp"
			android:fontFamily="@font/productsansregular"
			android:text="@string/location"
			android:textSize="@dimen/_12sdp"
			android:textStyle="bold" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/phone"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="@dimen/_25sdp"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/location">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_phone_call" />


		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/_10sdp"
			android:fontFamily="@font/productsansregular"
			android:text="@string/phone"
			android:textSize="@dimen/_12sdp"
			android:textStyle="bold" />

	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/_15sdp"
		app:layout_constraintBottom_toBottomOf="parent">


		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btnAllowPermission"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_50sdp"
			android:layout_alignParentBottom="true"
			android:layout_marginStart="12dp"
			android:layout_marginEnd="12dp"
			android:layout_marginBottom="@dimen/_15sdp"
			android:background="@drawable/button_selected"
			android:fontFamily="@font/productsansregular"
			android:padding="12dp"
			android:text="@string/allow_permissions"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="18sp"
			android:textStyle="bold" />

	</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>