<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/llGradientTOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradienttop_bg"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sign_up_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="top"
                android:lineSpacingExtra="1sp"
                android:text="Welcome Back!"
                android:textAppearance="@style/sign_up_"
                android:translationY="-0.64sp" />

            <TextView
                android:id="@+id/please_fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="5sp"
                android:text="Let’s get you a ride"
                android:textAppearance="@style/please_fill"
                android:translationY="-2.32sp" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llGradientTOP"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:textStyle="bold"
            android:paddingBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_account_using_otp"
            android:textStyle="normal"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14ssp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp">

            <EditText
                android:id="@+id/etMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter phone number"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:padding="@dimen/_15sdp"
                android:paddingStart="@dimen/_38sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintTextColor"
                android:textSize="18sp"
                android:textStyle="bold">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:text="+91"
                android:background="@null"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/bg_selected_view"
            android:elevation="20dp"
            android:text="Login"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llForm"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgFacebook"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_3sdp"
                android:src="@drawable/facebook_logo"
                app:civ_border_color="#EEEEEE"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgGoogle"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_3sdp"
                android:src="@drawable/google_logo"
                app:civ_border_color="#EEEEEE"/>
        </LinearLayout>



    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/textColor"
        android:text="@string/terms_of_service_text"
        />

</RelativeLayout>